force-app/main/default/objects/Sell_Through_Report__c/Sell_Through_Report__c.object-meta.xml
<CustomObject>
    <label>Sell Through Report Record</label>
    <nameField>
        <label>Sell Through Report Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Through Report Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>