force-app/main/default/objects/Sell_Through_Report__c/fields/CMS_distributor_id__c.field-meta.xml
<CustomField>
    <fullName>CMS_distributor_id__c</fullName>
    <formula>VALUE(distributor__r.migrationtExternalId__c)</formula>
    <label>CMS distributor id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>