force-app/main/default/objects/Sell_Through_Report__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.VSSubRegion__c</field>
            <operation>equals</operation>
            <value>VSE DE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sell Through Report Records (company)</relationshipLabel>
    <relationshipName>Sell_Through_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>