force-app/main/default/objects/Sell_Through_Report__c/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <label>Customer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>