force-app/main/default/objects/Sell_Through_Report__c/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sell Through Report Records (distributor)</relationshipLabel>
    <relationshipName>Sell_Through_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>