force-app/main/default/objects/Sell_Through_Report__c/fields/distributor_id__c.field-meta.xml
<CustomField>
    <fullName>distributor_id__c</fullName>
    <label>Distributor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>