force-app/main/default/objects/Sell_Through_Report__c/fields/external_product_id__c.field-meta.xml
<CustomField>
    <fullName>external_product_id__c</fullName>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>