force-app/main/default/objects/Sell_Through_Report__c/fields/Sale_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date_Text__c</fullName>
    <label>Sale Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>