force-app/main/default/objects/Sell_Through_Report__c/fields/Sell_Through_Report_Header__c.field-meta.xml
<CustomField>
    <fullName>Sell_Through_Report_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell Through Report Header</label>
    <referenceTo>Sell_Through_Report_Header__c</referenceTo>
    <relationshipName>Sell_Through_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>