force-app/main/default/objects/Sell_Through_Report__c/fields/Sell_Through_Report_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Sell_Through_Report_Import_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sell Through Report Import Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>