force-app/main/default/objects/Sell_Through_Report__c/fields/VS_Region__c.field-meta.xml
<CustomField>
    <fullName>VS_Region__c</fullName>
    <formula>TEXT(distributor__r.VSRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VS Region</label>
    <type>Text</type>
</CustomField>