force-app/main/default/objects/Sell_Through_Report__c/fields/week_of_year__c.field-meta.xml
<CustomField>
    <fullName>week_of_year__c</fullName>
    <label>week of year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>