force-app/main/default/objects/Sell_Through_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>company__c</columns>
    <columns>customer_id__c</columns>
    <columns>distributor__c</columns>
    <columns>distributor_id__c</columns>
    <columns>Import_File__c</columns>
    <columns>product_code__c</columns>
    <columns>external_product_id__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>