force-app/main/default/objects/Sell_Through_Report__c/listViews/VSI.listView-meta.xml
<ListView>
    <fullName>VSI</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>company__c</columns>
    <columns>CustomerName__c</columns>
    <columns>distributor__c</columns>
    <columns>Import_File__c</columns>
    <columns>product_code__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VS_Region__c</field>
        <operation>equals</operation>
        <value>VSI</value>
    </filters>
    <label>VSI</label>
    <language>en_US</language>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>